# workaround-tracker

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
requirements/: base.in  base.txt  development.in  development.txt
src/workaround_tracker/: common.py  main.py
src/workaround_tracker/code_scanner/: __init__.py  _base.py  _manager.py  _python.py
src/workaround_tracker/issue_checker/: __init__.py  _base.py  _github.py  _gitlab.py  _manager.py
tests/: conftest.py  test_code_scanner.py  test_common.py  test_issue_checker.py  test_main.py
tests/data/cache/: cache_0.json
tests/data/code/: code.py
tests/data/code/subdir/: file.py
tests/data/config/: config_0.yaml  config_1.yaml
